force-app/main/default/objects/Account/fields/Create_Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Create_Related_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Related Contact</label>
    <type>Checkbox</type>
</CustomField>