force-app/main/default/objects/Account/fields/Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credentials__c</fullName>
    <formula>&quot;Username-&quot;&amp;$Setup.API_Auth__c.Username__c&amp;&quot; and &quot;&amp; $Setup.API_Auth__c.Password__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credentials</label>
    <type>Text</type>
</CustomField>