force-app/main/default/objects/Account/fields/Opportunity_Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item_Count__c</fullName>
    <label>Opportunity Line Item Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>