force-app/main/default/objects/Account/fields/Related_Contacts_Size__c.field-meta.xml
<CustomField>
    <fullName>Related_Contacts_Size__c</fullName>
    <label>Related Contacts Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>