force-app/main/default/objects/Account/fields/Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>Total_Investment__c</fullName>
    <label>Total Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>